fix change percentage alignment when positive

--- a/src/components/Global/PoolCard/PoolCard.module.css
+++ b/src/components/Global/PoolCard/PoolCard.module.css
@@ -118,7 +118,7 @@
     font-weight: 200;
     font-size: 12px;
     line-height: 22px;
-
+    margin-top: 2px;
     letter-spacing: -0.02em;
 
     /* other/positive */
